internal/kgateway/setup/testdata/standard/jwt-trafficpolicy.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http-gw-for-test
  namespace: gwtest
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTP
      hostname: "example.com"
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: gwtest
  labels:
    app: reviews
    service: reviews
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: reviews
---
apiVersion: v1
kind: Service
metadata:
  name: extproc
  namespace: gwtest
spec:
  ports:
    - port: 9091
      protocol: TCP
      appProtocol: kubernetes.io/h2c
      targetPort: 9091
  selector:
    app: extproc
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: reviews-slice
  namespace: gwtest
  labels:
    kubernetes.io/service-name: reviews
    app: reviews
    service: reviews
addressType: IPv4
endpoints:
  - addresses:
      - 10.244.1.11
    conditions:
      ready: true
    nodeName: worker
    targetRef:
      kind: Pod
      name: reviews-1
      namespace: gwtest
  - addresses:
      - 10.244.2.14
    conditions:
      ready: true
    nodeName: worker
    targetRef:
      kind: Pod
      name: extproc
      namespace: gwtest
ports:
  - name: http
    port: 8080
    protocol: TCP
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayExtension
metadata:
  name: jwt-ext
  namespace: gwtest
spec:
  type: JWT
  jwtProviders:
    my-example:
      claimsToHeaders:
        - name: org
          header: x-org
        - name: email
          header: x-email
      issuer: https://my.example.com
      jwks:
        local:
          key: |
            -----BEGIN PUBLIC KEY-----
            MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAmXtvzsvqA619Cgw/z4p+
[...]
            SwIDAQAB
            -----END PUBLIC KEY-----
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: route-test
  namespace: gwtest
spec:
  targetRefs:
    - kind: HTTPRoute
      group: gateway.networking.k8s.io
      name: route
  jwt:
    extensionRef:
      name: jwt-ext
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: gwtest
spec:
  parentRefs:
    - name: http-gw-for-test
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: reviews
          port: 8080
